Hoan thanh bai-2
Bai -2 duoc hoan thanh

--- a/bai-2/galery.html
+++ b/bai-2/galery.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+
+	<!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+	
 	<head>
 		<title>Gallery</title>
 		<meta charset="UTF-8" />
@@ -10,75 +16,98 @@
 
 	<body>
 		<div class="wrap">
-		<div id="banner"> 
-			<img src="img/22214262-Willkommen-Banner-Clipping-Pfad-enthalten-Lizenzfreie-Bilder.jpg"/>
+
+			<div id="banner"> 
+				<img src="img/22214262-Willkommen-Banner-Clipping-Pfad-enthalten-Lizenzfreie-Bilder.jpg" width="1000"/>
+			</div>
+
+			<div id="main-menu">
+				<a href="home.html">Trang chủ</a>
+				<a href="about.html" class="active">Giới thiệu</a>
+				<a href="gallery.html">Album ảnh</a>
+				<a href="post.html">Bài đăng</a>
+			</div>
+
+			<h1 id="tieude1"><strong>Whom do you like dating with?</strong></h1>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">
+					<img src="img/anh-gai-xinh-1.jpg" alt="gai1" title="gai1" width="320" height="400" />
+				</div>
+			</div>	
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/anh-gai-xinh-2.jpg" alt="gai2" title="gai2" width="320" height="400" />
+				</div>
+			</div>
+
+
+			<div class="zoom-effect-container">	
+				<div class="gaixinh">	
+					<img src="img/anh-gai-xinh-20.jpg" alt="gai3" title="gai3" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+
+				<div class="gaixinh">	
+					<img src="img/anh-gai-xinh-de-thuong.jpg" alt="gai4" title="gai4" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/anh-girl-xinh-2014-4.jpg" alt="gai5" title="gai5" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/anh-girl-xinh-gai-dep-98-18.jpg" alt="gai6" title="gai6" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/co-gai-hien-mau-xinh-5-1448070344.jpg" alt="gai7" title="gai7" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/co-gai-xinh-dep-nhuom-rang-den-gay-bao-mang-8.jpg" alt="gai8" title="gai8" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/co-gai-xinh-dep-va-cuoc-tinh-viva-515-1383884625-527c675127eef.jpg" alt="gai9" title="gai9" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/gai-xinh-om-han-chi-vi-chup-anh-mat-lech.jpg" alt="gai10" title="gai10" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">			
+					<img src="img/girl-xinh-dan-toc-mong.jpg" alt="gai11" title="gai11" width="320" height="400" />
+				</div>
+			</div>
+
+			<div class="zoom-effect-container">
+				<div class="gaixinh">	
+					<img src="img/hinh-nen-girl-xinh-10.jpg" alt="gai12" title="gai12" width="320" height="400" />
+				</div>
+			</div>
+				
+
+			</div>	
+
 		</div>
-
-		<div id="main-menu">
-			<a href="home.html">Trang chủ</a>
-			<a href="about.html" class="active">Giới thiệu</a>
-			<a href="gallery.html">Album ảnh</a>
-			<a href="post.html">Bài đăng</a>
-		</div>
-
-		<h1>Ảnh hotgirl</h1>
-
-		<div class="gaixinh">
-			<img src="img/anh-gai-xinh-1.jpg" alt="gai1" title="gai1" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/anh-gai-xinh-2.jpg" alt="gai2" title="gai2" width="400" />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/anh-gai-xinh-20.jpg" alt="gai3" title="gai3" width="400" />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/anh-gai-xinh-de-thuong.jpg" alt="gai4" title="gai4" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/anh-girl-xinh-2014-4.jpg" alt="gai5" title="gai5" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/anh-girl-xinh-gai-dep-98-18.jpg" alt="gai6" title="gai6" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/co-gai-hien-mau-xinh-5-1448070344.jpg" alt="gai7" title="gai7" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/co-gai-xinh-dep-nhuom-rang-den-gay-bao-mang-8.jpg" alt="gai8" title="gai8" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/co-gai-xinh-dep-va-cuoc-tinh-viva-515-1383884625-527c675127eef.jpg" alt="gai9" title="gai9" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/gai-xinh-om-han-chi-vi-chup-anh-mat-lech.jpg" alt="gai10" title="gai10" width="400" />
-		</div>
-
-		<div class="gaixinh">			
-			<img src="img/girl-xinh-dan-toc-mong.jpg" alt="gai11" title="gai11" width="400"  />
-		</div>
-
-		<div class="gaixinh">	
-			<img src="img/hinh-nen-girl-xinh-10.jpg" alt="gai12" title="gai12" width="400" />
-		</div>
-
-		</div>
-
-		<div id="main-content">
-
-		</div>
-		
-
-
 	</body>
 
 
