Bai 4 them chuc nang chay cho ten tac gia
Chu chua dung lai duoc

--- a/bai-4/index.html
+++ b/bai-4/index.html
@@ -56,7 +56,7 @@
 		</div>
 
 		<div id="tg">
-			<h3>Thang Sieger</h3>
+			<h3><marquee width="150">Thang Sieger</marquee></h3>
 		</div>
 
 	</div>
