--- a/bai-4 fade in fade out/index.html
+++ b/bai-4 fade in fade out/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" type="image/png" href="img/chỉ mục.png"/>
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 </head>
 
 <body>
@@ -55,10 +56,11 @@
 			</div>
 		</div>
 
-		<div id="tg">
-			<h3><marquee width="150">Thang Sieger</marquee></h3>
-		</div>
-
+		<div class="w3-container w3-center w3-animate-right">
+			<div id="tg">
+				<h3>Thang Sieger</h3>
+			</div>			
+		</div>		
 	</div>
 
 
