bai-5 Hoan thanh
Hoan thanh bai 5

--- a/bai-5 tao thiep chuc mung/index.html
+++ b/bai-5 tao thiep chuc mung/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -23,37 +23,8 @@
 	</div>	
 
 	<audio autoplay>
-  		<source src="audio/Rednex - Hold Me For A While.mp3" type="audio/mpeg">
+  		<source src="Rednex - Hold Me For A While.mp3" type="audio/mpeg">
 	</audio>
 
-
-
-	
-=======
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>Happy Annyversary</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="icon" type="image/png" href="img/download.jpg"/>
-</head>
-
-<body>
-
-	<div class="wrap1">
-		<div id="snow">
-			<h1 class="hu">Kỷ niệm ngày quen em <img src="img/love2.png"></h1>
-			<div>
-				<img src="img/5-Creative-Tips-to-Celebrate-Your-One-Year-Dating-Anniversary1.jpg">
-			</div>
-		</div>		
-	</div>	
-
-	<audio autoplay>
-  		<source src="audio/Rednex - Hold Me For A While.mp3" type="audio/mpeg">
-	</audio>
-
-	
->>>>>>> origin/master
 </body>
+</html>
