bai-5 Hoan thanh
Hoan thanh bai 5

--- a/bai-5 tao thiep chuc mung/index.html
+++ b/bai-5 tao thiep chuc mung/index.html
@@ -16,14 +16,14 @@
 			<div class="abc">
 				<img src="img/5-Creative-Tips-to-Celebrate-Your-One-Year-Dating-Anniversary1.jpg">
 			</div>
-			<div class="phaohoa">
+			<!-- <div class="phaohoa">
 				<script type="text/javascript" src= "http://yourjavascript.com/141525167513/hieuungphaohoa.js" ></script> <iframe src="http://www.nhaccuatui.com/mh/background/uCxytx9BioUS" width="1" height="1" frameborder="0" allowfullscreen=""><iframe> 
 
-			</div>
+			</div> -->
 	</div>	
 
 	<audio autoplay>
-  		<source src="Rednex - Hold Me For A While.mp3" type="audio/mpeg">
+  		<source src="audio/hold_me.mp3" type="audio/mpeg">
 	</audio>
 
 </body>
