--- a/bai-8 vong lap/vonglap.html
+++ b/bai-8 vong lap/vonglap.html
@@ -11,7 +11,7 @@
 	
 
 // Bai 1 
-function giaithua(n) {
+/*function giaithua(n) {
 		if (n < 0) {
 			document.write("<p> Không tính được giai thừa </p>");
 		}
@@ -21,10 +21,10 @@ function giaithua(n) {
 			result *= i; 
 			document.write("<span> " + n + "! là " + result +"</span>" );
 		}
-}
+}*/
 
 // Bai 2
-function daochuoi(words) {
+/*function daochuoi(words) {
 	// words = prompt("Write a word or a sentence: "); 
 	if (words != null) {
 	var mang = words.split(""); // tao thanh 1 mang cac ki tu
@@ -34,10 +34,10 @@ function daochuoi(words) {
 	document.getElementById("demo").innerHTML = dao; // in string do vao the co id la demo
 	}
 	return dao;
-}
+}*/
 
 // Bai 3
-num = prompt("Write number: ");
+/* num = prompt("Write number: ");
 	function duplicate(n) {
 		var i;
 		for (var i =0; i <n ; i++) {
@@ -45,13 +45,28 @@ num = prompt("Write number: ");
 		}
 		document.write(+num);
 	}
-	duplicate(9);
+	duplicate(9); */
 
 // Bai 4
-n = prompt("Write quality of students: ");
-ds[] = prompt("Nhập tên học viên theo kiểu mảng: ")
-function 
+/*function danhsach(n) {
+	var ds = ["Tung", "Minh", "Hoa", "Thanh", "Dung", "Binh"];
+	ds.sort();
+	for (var i = 1; i <= n; i = i + 1) {
+		document.write("<p>" + i + " : " + ds[i-1]+"</p>");
+	}
+}*/
 
+// Bai 5
+/*var so = [3, 6, 8, 7, 2, 9, ,4];
+function gapdoi(so) {
+	n = so.length;
+	document.write("[")
+	for (var i = 0; i < n; i++) {
+	so[i] = 2 * so[i];
+	document.write("<spap>" + " " + so[i]  + "</span>");
+	}
+	document.write("]");
+}*/
 
 
 
