Bai 9 - Chua hoan thanh
Dang lam bai 4

--- a/bai-8 vong lap/vonglap.html
+++ b/bai-8 vong lap/vonglap.html
@@ -69,7 +69,7 @@ function gapdoi(so) {
 }*/
 
 //Bai 6
-function sodu(mangos) {
+function sodu(mangso) {
 	var mangso = [3, 4, 5, 8, 9, 7, 1, 4];
 	n = mangso.length;
 	document.write("[");
