--- a/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_1.html
+++ b/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_1.html
@@ -41,4 +41,59 @@
 		} 	
 }*/
 
+//Bai 3
+/*var batky = [3, 12, 36, 2, 56, 5, 7, 4, 8, 3, 6, 16, 3];
+var arr = [];
+for (var i = 0; i < batky.length; i++) {
+	if (batky[i] % 2 == 0) {
+		arr.push(batky[i]);
+	}
+}
+arr.sort(function(a,b) {return(b - a)})
+document.write ("[");
+document.write (arr);
+document.write ("]");*/
+
+//Bai 4
+var user = {
+	 username: "username",
+	 password: "secret",
+	 confirm: "secret",
+}
+if (user["username"].length < 3) {
+	
+document.write("Username hợp lệ");
+}
+
+
+
+if (username.length <= 20) {
+		document.write ("Username hợp lệ");
+	}
+} else {
+	document.write ("Username không hợp lệ");
+}
+if (password.length >= 6 && password.length <= 32) {
+	document.write ("Password hợp lệ");
+} else {
+	document.write ("Password không hợp lệ");
+}
+if (confirm = password) {
+	document.write ("Password hợp lệ");
+} else {
+	document.write ("Password không hợp lệ");
+}
+
+
+
 </script>
+
+
+
+
+
+
+
+
+
+
