Bai 9 Dieu kien re nhanh 2
Dang lam do

--- a/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_1.html
+++ b/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title> Điều kiện rẽ nhánh </title>
+	<title> Điều kiện rẽ nhánh 1</title>
 	<meta charset="utf8">
 </head>
 <body>
@@ -55,36 +55,26 @@ document.write (arr);
 document.write ("]");*/
 
 //Bai 4
-var user = {
+/*var user = {
 	 username: "username",
 	 password: "secret",
 	 confirm: "secret",
 }
-if (user["username"].length < 3) {
-	
-document.write("Username hợp lệ");
-}
-
-
-
-if (username.length <= 20) {
-		document.write ("Username hợp lệ");
-	}
+if (user["username"].length <= 20 && user["username"].length != 0) {
+	document.write ("Username hợp lệ <br/>");
 } else {
-	document.write ("Username không hợp lệ");
+	document.write ("Username không hợp lệ <br/>");
 }
-if (password.length >= 6 && password.length <= 32) {
-	document.write ("Password hợp lệ");
+if (user["password"].length >= 6 && user["password <br/>"] <= 32) {
+	document.write("Password hợp lệ <br/>");
 } else {
-	document.write ("Password không hợp lệ");
+	document.write ("Password không hợp lệ <br/>");
 }
-if (confirm = password) {
-	document.write ("Password hợp lệ");
+if (user["confirm"] === user["confirm"]) {
+	document.write("Đúng với password <br/>");
 } else {
-	document.write ("Password không hợp lệ");
-}
-
-
+	document.write ("Không đúng với password <br/>");
+}*/
 
 </script>
 
