bai-9 Dieu kien re nhanh 2
Chua hoan thanh

--- a/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_2.html
+++ b/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_2.html
@@ -57,7 +57,7 @@ switch (month) {
 document.write("Đây là " + monat);*/	
 
 //Bai 2
-function catchuoi(chuoi) {
+/*function catchuoi(chuoi) {
 
 	document.write("Tham số vừa nhập vào là " + typeof(chuoi) + "<br/>");
 
@@ -82,7 +82,68 @@ function catchuoi(chuoi) {
 	} else {
  		document.write ("Không xử lý được" + "<br/>");
 	}			
+}*/
+
+//Bai 3
+/*x = prompt ("Nhập vào điểm số: ");
+document.write ("Điểm số vừa nhập vào là: " + x + "<br/>");
+if (x >= 0 && x <= 4) {
+    document.write ("Điểm số của bạn là loại F");  
+} else if (x >= 4 && x < 5.5) {
+    document.write ("Điểm số của bạn là loại D");
+} else if (x >= 5.5 && x < 7) {
+    document.write ("Điểm số của bạn là loại C");
+} else if (x >= 7 && x < 8.5) {
+    document.write ("Điểm số của bạn là loại B");
+} else if (x >= 8.5 && x <= 10) {
+    document.write ("Điểm số của bạn là loại A");
+} else {
+    document.write ("Bạn nhập cái gì vào vậy?");
+}*/
+
+//Bai 4
+/*function translate (tieng) {
+    var tieng = prompt ("Nhập mã quốc gia DE, FR, NL, DA, RS");
+    document.write ("Hello" + "<br/>");
+    switch (tieng) {
+        case "DE":
+            document.write ("Mã quốc gia nước Đức: Hallo" + "<br/>");
+            break;
+        case "FR":
+            document.write ("Mã quốc gia nước Pháp: Bonjour" + "<br/>");
+            break;
+        case "NL":
+            document.write ("Mã quốc gia nước Hà Lan: Hallo" + "<br/>");
+            break;
+        case "DA":  
+            document.write ("Mã quốc gia nước Đan Mạch: Hej" + "<br/>");
+            break;
+        case "RS":           
+            document.write ("Mã quốc gia nước Nga: Здравствуйте" + "<br/>");
+            break;    
+        default:
+            document.write ("Xin chào" + "<br/>");     
+    }
+}*/
+
+//Bai 5
+var mang = [false, false, false, true, false, true, false, true];
+var x = mang [];
+for (x = 0; x <= mang.length; x++) {
+    if ()
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 	
 </script>
