bai-9 Dieu kien re nhanh 2
Hoan thanh

--- a/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_2.html
+++ b/bai-9 Dieu kien re nhanh/dieu_kien_re_nhanh_2.html
@@ -4,9 +4,17 @@
 	<meta charset="utf8">
 </head>
 <body>
-	<h2>Điều kiện rẽ nhánh</h2>
+	<h2>Điều kiện rẽ nhánh 2</h2>
 	<div id="demo"></div>
 </body>
+<style type="text/css">
+    .clr1 {
+        color: red;
+    }
+    .clr2 {
+        color: green;
+    }
+</style>
 <script type="text/javascript">
 
 // Bai 1
@@ -127,23 +135,46 @@ if (x >= 0 && x <= 4) {
 }*/
 
 //Bai 5
-var mang = [false, false, false, true, false, true, false, true];
-var x = mang [];
-for (x = 0; x <= mang.length; x++) {
-    if ()
-}
+/*var mang = ["false", "true", "false", "false", "true", "false", "true"];
+for (var i = 0; i < mang.length; i++) {
+    if ( mang[i] == "true") {
+        document.write("Vị trí true xuất hiện lần đầu là vị trí thứ " + (i + 1) + "<br/>");
+        break;
+    }
+}*/
 
+//Bai 6
+/*var ketqua = '';
+var final = '<span class="clr1">' + 100 + " " + '<span>';
+    for (var i = 0; i < 100; i++) {
+        // document.write (" " + i + " ");
+        while (i % 2 == 0) {
+            ketqua += '<span class="clr1">' +i +" "+ '<span>';
+          break;  
+        } 
+            i += 1;
+            ketqua += '<span class="clr2">' + i + " " + '<span>';
+    }   
+    document.write(ketqua);
+    document.write(final);*/
 
-
-
-
-
-
-
-
-
-
-
-
-	
+//Bai 6 
+/*var ketqua = "";
+//function dayso(n) {
+    for (i = 1; i < 101 ; i++) {
+        if (i % 2 == 0) {
+            document.write ("<span class = clr1>" + " " +  i + " " + "</span>");
+        } else {
+            document.write ("<span class = clr2>" + " " +  i + " " + "</span>");
+        }
+    }
+//}*/
 </script>
+
+
+
+
+
+
+
+
