--- a/bai-12 DOM event/caculator.html
+++ b/bai-12 DOM event/caculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/design.css">
+		<link rel="stylesheet" type="text/css" href="CSS/design.css">
 	</head>
 	<title>Calculator</title>
 
