--- a/Projekt ban do phuot/Projekt phuot/trangchu.html
+++ b/Projekt ban do phuot/Projekt phuot/trangchu.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/trangchu.css">
 </head>
 
 
@@ -14,6 +14,8 @@
 			<img src="img/Avt-shop-1.png" alt="logo" title="logo">
 		</div>
 
+		<i class="fa fa-user" aria-hidden="true"></i>
+
 		<div id="mainmenu">
 			<ul>
 				<li><a href="trangchu.html">Trang chủ</a></li>
@@ -23,6 +25,22 @@
 				<li><a href="lienhe.html">Liên hệ</a></li>
 			</ul>
 		</div>
+
+		<div class="container">
+			<div class="row">
+	         	<div id="custom-search-input">
+		            <div class="input-group col-md-12">
+		                <input type="text" class="  search-query form-control" placeholder="Search" />
+		                <span class="input-group-btn">
+		                    <button class="btn btn-danger" type="button">
+		                        <span class=" glyphicon glyphicon-search"></span>
+		                    </button>
+		                </span>
+		            </div>
+	      		</div>
+			</div>
+		</div>
+
 
 		<div id="menu"> 
 			<ul>
