--- a/Projekt ban do phuot/Projekt phuot/trangchu.html
+++ b/Projekt ban do phuot/Projekt phuot/trangchu.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/trangchu.css">
 </head>
 
@@ -12,6 +13,18 @@
 
 		<div id="logo"> 
 			<img src="img/Avt-shop-1.png" alt="logo" title="logo">
+		</div>
+
+		<div id="cartloginsignup">
+			<p>cart
+				<img src="img/64_64_empty-cart-dark.png" alt="cart" title="cart">
+			</p> 
+			<p>login
+				<img src="img/loginsymbol.png" alt="cart" title="cart">
+			</p>
+			<p>sign up
+				<img src="img/loginsymbol.png" alt="cart" title="cart">
+			</p>
 		</div>
 
 		<i class="fa fa-user" aria-hidden="true"></i>
@@ -40,7 +53,10 @@
 	      		</div>
 			</div>
 		</div>
-
+	
+		<div id="banner">
+			<img src="img/635646363640191893-banner-biker.jpg">	
+		</div>
 
 		<div id="menu"> 
 			<ul>
@@ -52,6 +68,77 @@
 				<li><a href="sanphamkhac.html">Sản phẩm khác</a></li>
 			</ul>
 		</div>
+
+		<div id="sanpham">
+			<h2>Balo và túi</h2>
+			<img src="img/Balo tui/images.jpg" alt="balotui1" title="balotui1" width="320" height="400" />	
+			<img src="img/Balo tui/images0.jpg" alt="balotui2" title="balotui2" width="320" height="400" />	
+			<img src="img/Balo tui/images3.jpg" alt="balotui3" title="balotui3" width="320" height="400" />	
+			<img src="img/Balo tui/images4.jpg" alt="balotui4" title="balotui4" width="320" height="400" />	
+			<img src="img/Balo tui/index copy.jpg" alt="balotui5" title="balotui5" width="320" height="400" />
+
+			<h2>Quần áo</h2>
+			<img src="img/Quan ao/download.jpeg" alt="quanao1" title="quanao1" width="320" height="400" />	
+			<img src="img/Quan ao/images copy.jpg" alt="quanao2" title="quanao2" width="320" height="400" />	
+			<img src="img/Quan ao/images.jpg" alt="quanao3" title="quanao3" width="320" height="400" />	
+			<img src="img/Quan ao/index.jpg" alt="quanao4" title="quanao4" width="320" height="400" />	
+			<img src="img/Quan ao/index copy.jpg" alt="quanao5" title="quanao5" width="320" height="400" />
+
+			<h2>Giày dép</h2>
+			<img src="img/Giay dep/images copy 2.jpeg" alt="giaydep1" title="giaydep1" width="320" height="400" />	
+			<img src="img/Giay dep/images copy.jpeg" alt="giaydep2" title="giaydep2" width="320" height="400" />	
+			<img src="img/Giay dep/images copy 3.jpeg" alt="giaydep3" title="giaydep3" width="320" height="400" />	
+			<img src="img/Giay dep/images copy 5.jpeg" alt="giaydep4" title="giaydep4" width="320" height="400" />	
+			<img src="img/Giay dep/images copy 7.jpeg" alt="giaydep5" title="giaydep5" width="320" height="400" />
+
+			<h2>Giáp bảo hộ</h2>
+			<img src="img/Giap bao ho/download (1).jpeg" alt="giapbaoho1" title="giapbaoho1" width="320" height="400" />
+			<img src="img/Giap bao ho/download (2).jpeg" alt="giapbaoho2" title="giapbaoho2" width="320" height="400" />
+			<img src="img/Giap bao ho/download (3).jpeg" alt="giapbaoho3" title="giapbaoho3" width="320" height="400" />
+			<img src="img/Giap bao ho/images (2).jpeg" alt="giapbaoho4" title="giapbaoho4" width="320" height="400" />	
+			<img src="img/Giap bao ho/images.jpeg" alt="giapbaoho5" title="giapbaoho5" width="320" height="400" />
+
+			<h2>Đồ phụ kiện</h2>
+			<img src="img/Do phu kien/images (1).jpeg" alt="dophukien1" title="dophukien1" width="320" height="400" />	
+			<img src="img/Do phu kien/images (2).jpeg" alt="dophukien2" title="dophukien2" width="320" height="400" />	
+			<img src="img/Do phu kien/images (3).jpeg" alt="dophukien3" title="dophukien3" width="320" height="400" />	
+			<img src="img/Do phu kien/images (4).jpeg" alt="dophukien4" title="dophukien4" width="320" height="400" />	
+			<img src="img/Do phu kien/images (5).jpeg" alt="dophukien5" title="dophukien5" width="320" height="400" />
+
+			<h2>Sản phẩm khác</h2>
+			<img src="img/San pham khac/Asun.vn1253.jpg" alt="dophukien1" title="dophukien1" width="320" height="400" />
+			<img src="img/San pham khac/imagde.php.jpeg" alt="dophukien2" title="dophukien2" width="320" height="400" />
+			<img src="img/San pham khac/image.fphp.jpeg" alt="dophukien3" title="dophukien3" width="320" height="400" />
+			<img src="img/San pham khac/image.p3hp.jpeg" alt="dophukien4" title="dophukien4" width="320" height="400" />
+			<img src="img/San pham khac/images copy 2.jpg" alt="dophukien5" title="dophukien5" width="320" height="400" />
+		</div>
+
+		<div>
+			<h2>GIỚI THIỆU CÔNG TY</h2>
+			<p>Công ty được thành lập năm .... chuyên kinh doanh mặt hàng đồ phượt với tiêu chí ... Chúng tôi luôn đảm bảm mang đến cho khách hàng những sản phẩm chất lượng tốt ......</p>
+
+			<h2>LIÊN KẾT</h2>
+			<p>Đối tác kinh doanh (Một vài logo công ty đối tác</p>
+
+			<h2>LIÊN HỆ</h2>
+			<p>Địa chỉ:
+			Số điện thoại
+			Email:
+			Tài khoản ngân hàng:
+			MST:
+			Giờ làm việc:</p>
+
+
+		</div>
+
+		<div id="backtotop">
+			<a href="#sanphamoi">
+				<img src="img/images (3).jpg">	
+
+		</div>
+
+
+
 
 	</div>
 </body>
