--- a/Projekt ban do phuot/Projekt phuot/trangchu_test.html
+++ b/Projekt ban do phuot/Projekt phuot/trangchu_test.html
@@ -46,13 +46,41 @@
 	</header>
 
 	<section class="container">
+
+
+/* <button type="button" class="btn btn-primary btn-lg" >
+  Launch demo modal
+</button> */
+
+<!-- Modal -->
+<div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Đây là modal thứ hai</h4>
+      </div>
+      <div class="modal-body">
+        Đây là một modal
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
 		<div class="row">
 			<div class="col-xs-6 col-sm-4 col-md-3">
-				<img src="img/Balo tui/images.jpg" class="img-resposive" />	
+				<a href="#" class="thumbnail" data-toggle="modal" data-target="#myModal">
+					<img src="img/Balo tui/images.jpg" class="img-resposive" />	
+				</a>	
 			</div>
 
 			<div class="col-xs-6 col-sm-4 col-md-3">
-				<img src="img/Balo tui/images.jpg" class="img-resposive" />	
+				<a href="#" class="thumbnail" data-toggle="modal" data-target="#modal2">
+					<img src="img/Balo tui/images.jpg" class="img-resposive" />	
 			</div>
 
 			<div class="col-xs-6 col-sm-4 col-md-3">
