--- a/Projekt cac khoa hoc lap trinh/trangchu.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu.html
@@ -60,7 +60,7 @@
 	<section class="container">
 
   <!-- Modal -->
-  <div>
+    
     <div class="modal fade" id="signin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -137,9 +137,8 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-            <p class="display"><style="color:blue; margin-bottom:30px;">Khóa học C++ cơ bản qua ví dụ được thiết kế đặc biệt cho những người mới học, chưa biết gì về lập trình.
-          </style>  
-          </p>
+            <p class="display" style="height: 228px">Khóa học C++ cơ bản qua ví dụ được thiết kế đặc biệt cho những người mới học, chưa biết gì về lập trình.
+           </p>
           <div class="ratings">
             <p class="pull-right">31 reviews</p>
             <p class="canle">
@@ -165,8 +164,7 @@
           <div class="display">  
             <hr noshade size=4 >
           </div>  
-          <p class="display"><style="color:blue; margin-bottom:30px;">Học qua dự án nhỏ demo, ngôn ngữ lập trình Python, framework Scikit-Learn, TensorFlow, Mlib trên Spark, Deeplearning4J (For java and Spark integratable).
-          </style>
+          <p class="display" style="height: 228px">Học qua dự án nhỏ demo, ngôn ngữ lập trình Python, framework Scikit-Learn, TensorFlow, Mlib trên Spark, Deeplearning4J (For java and Spark integratable).
           </p>
           <div class="ratings">
             <p class="pull-right">15 reviews</p>
@@ -177,8 +175,8 @@
               <span class="glyphicon glyphicon-star"></span>
               <span class="glyphicon glyphicon-star"></span>
             </p>
-          </div>  
-        </a>  
+           </a> 
+        </div> 
       </div>   
 
       <div class="col-xs-6 col-sd-4 col-md-3 fix">  
@@ -193,7 +191,7 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-          <p class="display font">Magento là một mã nguồn mở tạo web thương mại điện tử nổi tiếng được viết trên ngôn ngữ PHP - Ngôn ngữ lập trình web phổ biến nhất hiện nay tại Việt Nam. 
+          <p class="display" style="height: 228px">Magento là một mã nguồn mở tạo web thương mại điện tử nổi tiếng được viết trên ngôn ngữ PHP - Ngôn ngữ lập trình web phổ biến nhất hiện nay tại Việt Nam. 
           </p>
           <div class="ratings">
             <p class="pull-right">44 reviews</p>
@@ -220,7 +218,7 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-          <p class="display font">PHP là mã nguồn mở, nó hoàn toàn miễn phí, hỗ trợ người dùng xây dựng website với chi phí tiết kiệm nhất, nhờ đó mà PHP đã trở nên phổ biến một cách rất nhanh chóng trong những năm qua.  
+          <p class="display" style="height: 228px">PHP là mã nguồn mở, nó hoàn toàn miễn phí, hỗ trợ người dùng xây dựng website với chi phí tiết kiệm nhất, nhờ đó mà PHP đã trở nên phổ biến một cách rất nhanh chóng trong những năm qua.  
           </p>
           <div class="ratings">
             <p class="pull-right">33 reviews</p>
@@ -234,7 +232,8 @@
           </div>
         </a>  
       </div>
-</div>
+    </div>
+
     <div class="row">
       <div class="col-xs-6 col-sd-4 col-md-3 fix">
         <a href="#" class="thumbnail" data-toggle="modal" data-target="#modal5">
@@ -248,7 +247,7 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-          <p class="display font">Python là một ngôn ngữ lập trình scripting phổ biến và hết sức thú vị. Nó không phải ngôn ngữ có tốc độ thực thi nhanh như Assembly, C, C++. 
+          <p class="display" style="height: 228px">Python là một ngôn ngữ lập trình scripting phổ biến và hết sức thú vị. Nó không phải ngôn ngữ có tốc độ thực thi nhanh như Assembly, C, C++. 
           </p>
           <div class="ratings">
             <p class="pull-right">42 reviews</p>
@@ -275,7 +274,7 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-          <p class="display font">Lập trình Ruby on Rails thành thạo qua ít nhất 2 dự án Rails thực tế, mô hình MVC, lập trình theo quy ước thay cho cấu hình (convention over configuration).
+          <p class="display" style="height: 228px">Lập trình Ruby on Rails thành thạo qua ít nhất 2 dự án Rails thực tế, mô hình MVC, lập trình theo quy ước thay cho cấu hình (convention over configuration).
           </p>
           <div class="ratings">
             <p class="pull-right">17 reviews</p>
@@ -302,8 +301,7 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-          <p class="display"><style="color:blue; margin-bottom:30px;">Khóa học Thiết kế RESTful WebServices với Nodejs giúp các bạn xây dựng được những webservices đơn giản cho thiết bị di động hoặc ứng dụng SPA (Angular, Ember .v.v).
-          </style>
+          <p class="display" style="height: 228px">Khóa học Thiết kế RESTful WebServices với Nodejs giúp các bạn xây dựng được những webservices đơn giản cho thiết bị di động hoặc ứng dụng SPA (Angular, Ember .v.v).
           </p>  
           <div class="ratings">
             <p class="pull-right">12 reviews</p>
@@ -330,7 +328,7 @@
           <div class="display">
             <hr noshade size=4 >
           </div>  
-          <p class="display font">Học viên có toàn bộ mã nguồn và được hướng dẫn từng bước để thực hiện. Học viên đăng ký học được xem học liệu vĩnh viễn. Khóa học liên tục được cập nhật bài giảng mới, công nghệ mới khi có.
+          <p class="display" style="height: 228px">Học viên có toàn bộ mã nguồn và được hướng dẫn từng bước để thực hiện. Học viên đăng ký học được xem học liệu vĩnh viễn. Khóa học liên tục được cập nhật bài giảng mới, công nghệ mới khi có.
           </p>
           <div class="ratings">
             <p class="pull-right">12 reviews</p>
@@ -344,7 +342,7 @@
           </div>
         </a>  
       </div>  
-    </div>
+    
 	</section>
  
 
